fix: fix gap between buttons in bottom section

--- a/nonograms/style.css
+++ b/nonograms/style.css
@@ -377,7 +377,13 @@ tr:nth-child(5n + 1) {
   color: #e1d4c9;
 }
 .buttons-bottom {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  align-self: center;
   margin-bottom: 2rem;
+  gap: 1.6rem;
 }
 @media (width <= 700px) {
   h1 {
